# xethub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  LICENSE.txt  README.md  mise.toml
.github/workflows/: pre-commit.yaml  test.yaml
crates/cas_types/: Cargo.toml
crates/cas_types/src/: chunk.rs  lib.rs  reconstruction.rs  shard.rs  xorb.rs
crates/cas_types/tests/: reference_validation.rs
crates/chunking/: Cargo.toml
crates/chunking/src/: gearhash.rs  lib.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: chunk_hash.rs  file_hash.rs  lib.rs  merkle_hash.rs  merkle_tree.rs  verification.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/server/src/routes/: content.rs  dedup.rs  management.rs  mod.rs  reconstruction.rs  shard.rs  upload.rs  xorb.rs
crates/server/src/storage/: backend.rs  builder.rs  dispatch.rs  error.rs  filesystem.rs  mod.rs  object_store_backend.rs
crates/server/src/storage/index/: chunk_index.rs  dispatch.rs  file_index.rs  mod.rs  sqlite.rs  xorb_metadata.rs
crates/server/tests/: content_stream.rs  dedup.rs  dedup_benchmark.rs  performance.rs  range.rs  roundtrip.rs  xetcore_compat.rs
crates/server/tests/helpers/: mod.rs
docker/: .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  compose.local.yaml  compose.minio.yaml  compose.selfhost.yaml  litestream.yml
spec/: SPECIFICATION.md  plan.yaml  scope.md
spec/contracts/: config.proto  index_traits.proto  presign.proto  state.proto
test_data/: chunks.txt  file_hash.txt  range_hash.txt  xorb_hash.txt
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  router.tsx
web/src/components/: layout.tsx  table-preview.tsx
web/src/lib/: api.ts  duckdb.ts  format.ts
web/src/pages/: dashboard.tsx  file-detail.tsx  files.tsx  upload.tsx  xorbs.tsx
